@@ -49,24 +49,24 @@ $GNULIB/lib/gethostname.c			lib		no NI
 $GNULIB/m4/gethostname.m4			m4		no NI
 # $GNULIB/modules/getline
 $GNULIB/lib/getline.c				lib		yes NI
-$GNULIB/lib/getline.h				lib		yes NI
+$GNULIB/lib/getline.h				lib		no NI
 $GNULIB/lib/getndelim2.c			lib		yes NI
 $GNULIB/lib/getndelim2.h			lib		yes NI
 $GNULIB/lib/getnline.c				lib		yes NI
 $GNULIB/lib/getnline.h				lib		yes NI
-$GNULIB/m4/getline.m4				m4		yes NI
-$GNULIB/m4/getndelim2.m4			m4		yes NI
-$GNULIB/m4/getnline.m4				m4		yes NI
+$GNULIB/m4/getline.m4				m4		no NI
+$GNULIB/m4/getndelim2.m4			m4		no NI
+$GNULIB/m4/getnline.m4				m4		no NI
 $GNULIB/m4/ssize_t.m4				m4		no NI
 # $GNULIB/modules/getndelim2
 $GNULIB/lib/getndelim2.c			lib		yes NI
 $GNULIB/lib/getndelim2.h			lib		yes NI
-$GNULIB/m4/getndelim2.m4			m4		yes NI
+$GNULIB/m4/getndelim2.m4			m4		no NI
 $GNULIB/m4/ssize_t.m4				m4		no NI
 # $GNULIB/modules/getnline
 $GNULIB/lib/getnline.c				lib		yes NI
 $GNULIB/lib/getnline.h				lib		yes NI
-$GNULIB/m4/getnline.m4				m4		yes NI
+$GNULIB/m4/getnline.m4				m4		no NI
 $GNULIB/m4/ssize_t.m4				m4		no NI
 # $GNULIB/modules/gettext
 $GNULIB/lib/gettext.h				lib		no NI
@@ -129,8 +129,8 @@ $GNULIB/lib/getndelim2.c			lib		yes NI
 $GNULIB/lib/getndelim2.h			lib		yes NI
 $GNULIB/lib/getnline.c				lib		yes NI
 $GNULIB/lib/getnline.h				lib		yes NI
-$GNULIB/m4/getndelim2.m4			m4		yes NI
-$GNULIB/m4/getnline.m4				m4		yes NI
+$GNULIB/m4/getndelim2.m4			m4		no NI
+$GNULIB/m4/getnline.m4				m4		no NI
 $GNULIB/m4/inttypes_h.m4			m4		no NI
 $GNULIB/m4/onceonly_2_57.m4			m4		no NI
 $GNULIB/m4/ssize_t.m4				m4		no NI
